--- a/styles/pages/password.scss
+++ b/styles/pages/password.scss
@@ -1,4 +1,4 @@
-.ddh-login {
+.ddh-password {
   width: 100%;
   height: 100%;
   display: flex;
@@ -8,6 +8,8 @@
 
   &__form-container {
     @include auth-card;
+    min-height: 350px;
+    width: 40%;
 
     > form,
     > div {
@@ -41,22 +43,6 @@
           @include button(white, rgba(77, 132, 255, 0.8));
         }
       }
-    }
-
-    &--password-reset {
-      a {
-        font-weight: 600;
-        text-decoration: underline;
-
-        &:hover {
-          text-decoration: none;
-        }
-      }
-    }
-
-    &--error {
-      color: red;
-      font-weight: 600;
     }
   }
 }
