--- a/styles/core.scss
+++ b/styles/core.scss
@@ -1,3 +1,7 @@
+// Import Variable
+
+@import './variables.scss';
+
 // Components
 
 @import './components/navbar.scss';
@@ -6,6 +10,10 @@
 
 @import './pages/login.scss';
 @import './pages/register.scss';
+@import './pages/password.scss';
+
+@import './pages/dashboard.scss';
+@import './pages/taskmanagerform.scss';
 
 // Common
 
@@ -28,12 +36,15 @@ a {
 
 .app-container {
   display: flex;
+  position: relative;
 }
 
 .ddh-main {
   height: 100vh;
-  width: 90%;
-  background-color: #576398;
+  width: 100%;
+  background: linear-gradient(322deg, #ba4aff, rgba(#ba4aff, 0) 70%),
+    linear-gradient(178deg, #008aff, rgba(#008aff, 0) 70%),
+    linear-gradient(24deg, #00ffc6, rgba(#00ffc6, 0) 35%);
 }
 
 .loader-box {
@@ -45,8 +56,8 @@ a {
 }
 
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #576398;
   border-radius: 50%;
   width: 120px;
   height: 120px;
