DDH FE - Style added for task pages / Tasks now deletable / Task list sort added (WIP) (BEV-0.3.5)

--- a/styles/core.scss
+++ b/styles/core.scss
@@ -14,6 +14,9 @@
 
 @import './pages/dashboard.scss';
 @import './pages/taskmanagerform.scss';
+@import './pages/task-form.scss';
+@import './pages/task-list.scss';
+@import './pages/task.scss';
 
 // Common
 
