--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -19,7 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+  font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
   color: $color;
   font-size: 16px;
