--- a/styles/pages/task-form.scss
+++ b/styles/pages/task-form.scss
@@ -1,4 +1,4 @@
-.ddh-tmf {
+.ddh-task {
   width: 100%;
   height: 100%;
   display: flex;
@@ -20,6 +20,8 @@
       width: 100%;
       max-height: 525px;
       padding-right: 1%;
+      overflow: hidden;
+      overflow-y: scroll;
 
       &.scrollable {
         overflow-y: scroll;
@@ -74,6 +76,55 @@
       textarea {
         resize: vertical;
         height: 100px;
+      }
+
+      .text-desc {
+        height: 240px;
+      }
+
+      .react-tagsinput {
+        width: 100%;
+        padding: 10px;
+        padding-bottom: 7px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        margin-bottom: 10px;
+        background: white;
+
+        .react-tagsinput-tag {
+          padding: 5px;
+          padding-right: 12px;
+          border: 1px solid darkgrey;
+          position: relative;
+          border-radius: 5px;
+          margin-right: 5px;
+
+          a {
+            position: absolute;
+            right: 0;
+            top: 0;
+            display: block;
+            width: 10px;
+            height: 10px;
+            cursor: pointer;
+          }
+
+          a::before {
+            content: 'X';
+            position: absolute;
+            font-size: 12px;
+            width: 100%;
+            height: 10px;
+            opacity: 0.7;
+          }
+        }
+
+        .react-tagsinput-input {
+          width: fit-content;
+          padding: 5px;
+          border: none;
+          margin-bottom: 0;
+        }
       }
 
       .submit-btn {
