--- a/styles/pages/task-form.scss
+++ b/styles/pages/task-form.scss
@@ -148,5 +148,17 @@
         }
       }
     }
+    .submit-btn {
+      position: absolute;
+      width: 100%;
+      bottom: 20px;
+      left: 0;
+
+      button {
+        @include button(white, rgba(77, 132, 255, 0.8));
+        width: 20%;
+        margin: auto;
+      }
+    }
   }
 }
