DDH FE - Tag library page added (BEV-1.0.0)

--- a/styles/core.scss
+++ b/styles/core.scss
@@ -17,6 +17,7 @@
 @import './pages/task-form.scss';
 @import './pages/task-list.scss';
 @import './pages/task.scss';
+@import './pages/tags.scss';
 
 // Common
 
