--- a/styles/pages/dashboard.scss
+++ b/styles/pages/dashboard.scss
@@ -5,9 +5,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 45px;
 
   &__container {
     @include auth-card;
+    flex-direction: column;
+    justify-content: flex-start;
     width: 75%;
   }
 }
